infrastructure/private/private_gateway.tf
# Plik zawiera konfigurację dla prywatnej bramy internetowej i powiązanych zasobów
# Wykorzystywane jedynie w celach testowych
# W gotowym scenariuszu VPC powinno być dostępne z zewnątrz przez VPN z sieci publicznej

resource "aws_internet_gateway" "company_internet_gateway" {
  vpc_id = aws_vpc.company_vpc.id
  tags = {
    Name = "Company Internet Gateway"
  }
}

resource "aws_route_table" "company_route_table" {
  vpc_id = aws_vpc.company_vpc.id
  tags = {
    Name = "Company Route Table"
  }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.company_internet_gateway.id
  }
}

resource "aws_route_table_association" "company_subnet_association" {
  route_table_id = aws_route_table.company_route_table.id
  subnet_id      = aws_subnet.company_subnet.id

}
